구조 재 수정

--- a/실행가이드.md
+++ b/실행가이드.md
@@ -13,13 +13,13 @@ python3 -m http.server 8000
 웹 브라우저에서 다음 주소로 접속하세요:
 
 ```
-http://localhost:8000
+http://localhost:8000/html/
 ```
 
 ### 3단계: 테스트
 1. **홈페이지** 확인
 2. **"지금 시작하기"** 버튼 클릭
-3. **"업로드"** 탭에서 `estimate.xlsx` 파일 업로드
+3. **"업로드"** 탭에서 `Samples/estimate_synthetic_1.xlsx` 파일 업로드
 4. **"표준공사코드 매칭하기"** 버튼 클릭
 5. **대시보드**에서 결과 확인
 
@@ -54,7 +54,7 @@ python3 -m http.server 8001
 ```
 
 ### 파일 업로드 실패
-- `estimate.xlsx` 파일이 프로젝트 루트에 있는지 확인
+- `Samples/estimate_synthetic_1.xlsx` 파일이 있는지 확인
 - 브라우저 개발자 도구(F12)에서 오류 메시지 확인
 
 ### API 오류
@@ -65,11 +65,20 @@ python3 -m http.server 8001
 
 ```
 Junction/
-├── index.html          # 메인 페이지
+├── html/
+│   └── index.html     # 메인 페이지
 ├── css/               # 스타일 및 이미지
 ├── js/                # JavaScript 파일
-├── estimate.xlsx      # 테스트용 엑셀 파일
-└── README.md          # 상세 문서
+├── Data/
+│   └── standard.xlsx  # 표준공사코드 데이터
+├── Samples/           # 샘플 파일들
+│   ├── estimate_synthetic_1.xlsx
+│   ├── estimate_synthetic_2.xlsx
+│   ├── estimate_synthetic_3.xlsx
+│   ├── estimate_synthetic_4.xlsx
+│   └── estimate_synthetic_5.xlsx
+├── README.md          # 상세 문서
+└── 실행가이드.md      # 심사위원용 가이드
 ```
 
 ## 🎯 평가 포인트
